# weiyang-academic-helper

./: .env.example  .env.production  .gitignore  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  changes.patch  docker-compose.yml  nginx.conf  package-lock.json  package.json  prototype.md  pyproject.toml  teacher_mapping.csv
backend/: config.py  main.py
generalEdu/: Art.md  Humanities.md  README.md  Social.md  science.md
info_courses_html/: 1957990010;00050071_环境保护与可持续发展.html  1958990133;80602691_人工智能与新一代信息技术.html  1970990728;80515341_清华新兴技术探究.html  1970990728;80515911_清华新兴技术探究II.html  1982990036;20430154_量子力学（1）.html  1982990063;10721781_三年级女生气排球.html  1982990063;30720452_比较体育.html  1982990064;10720791_二年级女生游泳提高班.html  1982990064;10720871_二年级男生游泳提高班.html  1982990064;10720980_三年级男生游泳提高班.html  1982990064;10721810_三年级女生游泳提高班.html  1983990082;64200012_硕士生英语.html  1983990088;00781171_国际标准舞表演(6).html  1984990058;30220323_高电压工程.html  1984990058;30220593_高电压工程（英）.html  1984990137;60680021_自然辩证法概论.html  1984990148;10720371_二年级男生游泳.html  1985990014;30030372_房地产开发经营与管理.html  1985990014;80910062_房地产投资项目评估与案例….html  1985990024;00040262_石文化和艺术.html  1985990044;64910041_科研范式与论文写作.html  1985990092;62558051_科研范式与论文写作.html  1985990188;10720481_二年级女生健美操.html  1985990188;10721911_三年级女生高尔夫.html  1985990188;10726091_三年级男生高尔夫.html  1986990049;60150022_老子领导力哲理.html  1986990055;20120203_机械设计基础A(3).html  1986990092;60960011_生命伦理研究.html  1986990103;10721081_三年级男生羽毛球.html  1986990127;10721031_三年级男生足球提高课.html  1986990140;30420334_测度与积分.html  1986990148;70160232_系统工程.html  (+4463 more)
(+125 files in other folders)
